typescript/file_analyzer/tests/pass/vars/duplicate/1.ts
export function foo<T>(a: (x: T) => T, b: (x: T) => T) {
    var r: (x: T) => T;
    return r;
}

